--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
