--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=20.19.4",
+    "npm": ">=10.8.2"
   }
 }
